# ADK_Hackathon

./: .gitignore  README.md  pyproject.toml
backend/: .env  README.md  agent.py  app.py  fastapi.py  pyproject.toml
backend/calendar_agent/: agent.py  prompt.py  test.py  tool.py
backend/common/: agent_utils.py  tool_utils.py
backend/deployment/: deploy.py
backend/email_agent/: agent.py  main.py  tool.py
backend/mobility_agent/: agent.py  temp.py  tool.py
backend/personal_assistant/: agent.py  app.py  credentials.json  prompt.py  test.py
backend/personal_assistant/calendar_agent/: agent.py  prompt.py  test.py  tool.py
backend/personal_assistant/common/: agent_utils.py  tool_utils.py
backend/personal_assistant/email_agent/: agent.py  tool.py
backend/personal_assistant/email_agent/attachments/: 03_11_2025.docx
backend/personal_assistant/mobility_agent/: agent.py  tool.py
backend/playground/: test.py
email_agent/: credentials.json  main.py  temp.py  token.json  tool.py
frontend/: index.html  index.tsx  metadata.json  package-lock.json  package.json
mobility_agent/: temp.py  tool.py
