[project]
name = "adk-hackathon-new"
version = "0.1.0"
description = ""
authors = [
    {name = "davidtaoweiji", email = "davidtaoweiji@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.0.0,<2.0.0",
    "google-auth-oauthlib>=1.2.2,<2.0.0",
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.34.3,<0.35.0",
    "absl-py>=2.2.1",
    "python-dotenv>=1.0.0",
    "vertexai>=0.0.1",
    "google-cloud-aiplatform>=1.96.0",
    "cloudpickle>=3.1.1"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "common" },
    { include = "email_agent" },
    { include = "calendar_agent" },
    { include = "mobility_agent" },
    { include = "deployment" }
]
